# deployment-scripts

./: .gitignore  CHANGELOG.md  changelog.txt  setup.cfg
akave-connection/: rc2.al  rc3.al
customers/: dados.al  qualcomm.al
data-generator/: opcua_enterprise_a.al  power_plant.al  vessel_aggregation_demo.al
demo/: cluster_policy.al  connect_networking.al  main.al  node_policy.al  set_params.al
demo-scripts/: manual_config_policy.al
generic-policy/: README.md  blockchain_node.al  main.al  master_policy.al  publisher_node.al  query_node.al
moshe-clean/: bug.txt
node-deployment/: connect_blockchain.al  connect_networking.al  local_script.al  main.al  set_params.al
node-deployment/policies/: dbms_policy.al  (+5 more)
proveit-scripts/: bottle_factory_aggregation.al  bottle_factory_mqtt.al  bottle_factory_root.al  manufacturing_historian_mqtt.al  proveit_aggregation.al  uns_streaming.al
sample-scripts/: litmus.al
southbound-industrial/: sample_mapping_modbus.al  sample_modbus.al
southbound-monitoring/: config_monitoring_policy.al  configure_dbms_monitoring.al  configure_message_broker.al  create_node_monitoring_table.al  create_syslog_monitoring_table.al  deploy_monitoring.al  docker_monitoring.al  monitoring_node.al  node_monitoring_policy.al  node_monitoring_set_params.al  policy_docker_monitoring.al  policy_node_monitoring.al  policy_syslog_monitoring.al  schedule_docker_monitoring.al  schedule_node_monitoring.al  schedule_syslog_monitoring.al  table_syslog_monitoring.al
southbound-monitoring-old/: node_monitoring.al  prepare_monitoring.al  syslog_monitoring.al
(+11 files in other folders)
