[metadata]
name = deployment-scripts
version = 1.4.2604 (os-dev - 5226c0 [2026-05-24 04:36:52])
author = AnyLog Co.
contact = info@anylog.co
description = Deployment Scripts for Anylog nodes
license = Copyright AnyLog Co.
site = https://anylog.co
docs = https://github.com/AnyLog-co/documentation
source = https://github.com/AnyLog-co