[metadata]
name = deployment-scripts
version = 1.4.2604 (os-dev - 5c4aab [2026-05-25 00:25:35])
author = AnyLog Co.
contact = info@anylog.co
description = Deployment Scripts for Anylog nodes
license = Copyright AnyLog Co.
site = https://anylog.co
docs = https://github.com/AnyLog-co/documentation
source = https://github.com/AnyLog-co