[metadata]
name = deployment-scripts
version = 1.4.2604 (os-dev - 7a780f [2026-05-25 01:29:36])
author = AnyLog Co.
contact = info@anylog.co
description = Deployment Scripts for Anylog nodes
license = Copyright AnyLog Co.
site = https://anylog.co
docs = https://github.com/AnyLog-co/documentation
source = https://github.com/AnyLog-co